--- a/public/package.json
+++ b/public/package.json
@@ -32,7 +32,7 @@
     "electron-log": "^4.4.8",
     "electron-updater": "^4.6.5",
     "electron-window-state": "^5.0.3",
-    "is-online": "^9.0.1",
+    "is-reachable": "^5.2.1",
     "keytar": "^7.9.0",
     "network-speed": "^2.1.1",
     "node-notifier": "^10.0.1",
